[Sparsh] Refactor: Login API Created with JWT Token

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 PORT = 3000
 MONGO_URL = mongodb+srv://sparshyadavmrt:E1CVogPcnIyN68fV@cluster0.rxit5.mongodb.net/RestrauntQR
+JWT_SECRET=jwtsecretkey
