--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.10.0"
+    "mongoose": "^8.10.0",
+    "qrcode": "^1.5.4"
   }
 }
